kubernetes/apps/security/kyverno/policies/ingress-annotations.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: ingress-annotations
  annotations:
    policies.kyverno.io/title: Ingress annotations
    policies.kyverno.io/subject: Ingress
    policies.kyverno.io/description: >-
      This policy creates annotations on ingresses for external-dns,
      cert-manager and authentication based on custom annotations.
    policies.kyverno.io/category: Ingress, DNS, Authentication, Tailscale
spec:
  generateExisting: true
  rules:
    - name: external-dns
      match:
        any:
          - resources:
              kinds: ["Ingress"]
              annotations:
                external-dns.home.arpa/enabled: "true"
      mutate:
        patchStrategicMerge:
          metadata:
            annotations:
              +(external-dns.alpha.kubernetes.io/target): external.${SECRET_DOMAIN}
    - name: internal-dns
      match:
        any:
          - resources:
              kinds: ["Ingress"]
              annotations:
                external-dns.home.arpa/enabled: "false"
      mutate:
        patchStrategicMerge:
          metadata:
            annotations:
              +(external-dns.alpha.kubernetes.io/target): internal.${SECRET_DOMAIN}
